--- a/contactVn.html
+++ b/contactVn.html
@@ -18,12 +18,11 @@
 		<!-- <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script> -->
 		<script src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
 		<!-- CSS only -->
-		<link href="index.css" rel="stylesheet" />
+		<link href="indexVn.css" rel="stylesheet" />
 		<link href="contact.css" rel="stylesheet" />
 	</head>
 	<body>
 		<!-- Navigation -->
-
 		<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 			<a class="navbar-brand" href="#"
 				><img class="main-logo" src="image/logo.png" alt=""
@@ -35,16 +34,19 @@
 				<div class="row">
 					<ul class="nav justify-content-around">
 						<li class="nav-item">
-							<a class="btn btn-light nav-link" type="button" href="index.html"
-								>Home</a
+							<a
+								class="btn btn-light nav-link"
+								type="button"
+								href="indexVn.html"
+								>Trang chủ</a
 							>
 						</li>
 						<li class="nav-item">
 							<a
 								class="btn btn-light nav-link"
 								type="button"
-								href="aboutus.html"
-								>About us</a
+								href="aboutusVn.html"
+								>Về chúng tôi</a
 							>
 						</li>
 						<li class="nav-item dropdown">
@@ -58,20 +60,20 @@
 								aria-haspopup="true"
 								aria-expanded="false"
 							>
-								Product
+								Sản phẩm
 							</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<a class="dropdown-item" href="mushroomculti.html"
-									>Enzyme for mushroom cultivation</a
+								<a class="dropdown-item" href="mushroomcultiVn.html"
+									>Enzym xử lý nguyên liệu trồng nấm</a
 								>
-								<a class="dropdown-item" href="envitreatment.html"
-									>Enzyme for environmental treatment</a
+								<a class="dropdown-item" href="envitreatmentVn.html"
+									>Enzym xử lý môi trường</a
 								>
-								<a class="dropdown-item" href="envifeed.html"
-									>Enzyme for feeding - Feed additives</a
+								<a class="dropdown-item" href="envifeedVn.html"
+									>Enzym bổ sung thức ăn gia súc, thủy sản</a
 								>
-								<a class="dropdown-item" href="envifood.html"
-									>Enzyme for Maltose production</a
+								<a class="dropdown-item" href="envifoodVn.html"
+									>Enzym sản xuất mạch nha</a
 								>
 							</div>
 						</li>
@@ -79,26 +81,26 @@
 							<a
 								class="btn btn-light nav-link"
 								type="button"
-								href="service.html"
-								>Service</a
+								href="serviceVn.html"
+								>Dịch vụ</a
 							>
 						</li>
 						<li class="nav-item">
 							<a
 								class="btn btn-light nav-link"
 								type="button"
-								href="research.html"
-								>Reseach Finding</a
+								href="researchVn.html"
+								>Kết quả nghiên cứu</a
 							>
 						</li>
 						<li class="nav-item">
-							<a class="btn btn-light nav-link" type="button" href="faq.html"
-								>FAQ</a
+							<a class="btn btn-light nav-link" type="button" href="faqVn.html"
+								>Hỏi đáp</a
 							>
 						</li>
 						<li class="nav-item">
 							<a class="btn btn-light nav-link" type="button" href="#"
-								>Contact</a
+								>Liên hệ</a
 							>
 						</li>
 						<li>
@@ -123,7 +125,7 @@
 						>
 							English
 						</option>
-						<option value="contactVn.html" data-thumbnail="image/vietnam.svg">
+						<option value="#" data-thumbnail="image/vietnam.svg">
 							Vietnamese
 						</option>
 					</select>
@@ -154,11 +156,11 @@
 										<div class="u-container-layout u-container-layout-1">
 											<h2 class="u-text u-text-1">Enzyme Trồng Nấm</h2>
 											<p class="u-text u-text-2">
-												<span>Address:</span> No. 77, 26/3 St., Ha Tinh City, Ha
-												Tinh Province, Vietnam
+												<span>Đỉa Chỉ:</span> Số 77, đường 26/3, thành phố Hà
+												Tĩnh, tỉnh Hà Tĩnh
 											</p>
 											<p class="u-text u-text-3">
-												<span>Phone Number:</span> +84 949 583 418
+												<span>Số điện thoại:</span> +84 949 583 418
 											</p>
 											<p class="u-text u-text-4">
 												<span>Gmail:</span> diepquynhnhu@gmail.com
@@ -326,7 +328,7 @@
 			$('#a').html(langArray);
 
 			//Set the button value to the first el of the array
-			$('.btn-select').html(langArray[0]);
+			$('.btn-select').html(langArray[1]);
 			$('.btn-select').attr('value', 'en');
 
 			//change button stuff on click
