--- a/envifeedVn.html
+++ b/envifeedVn.html
@@ -7,136 +7,122 @@
         <title>Enzyme</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+        <link rel = "icon" href =  
+        "image/logo_title.png" 
+                type = "image/x-icon"> 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
         <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
         <script src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
-        <link rel = "icon" href =  
-        "image/logo_title.png" 
-                type = "image/x-icon"> 
+
         <!-- CSS only -->
-        <link href="index.css" rel="stylesheet">
-        <link href="research.css" rel="stylesheet">
-        <title>Ỉa</title>
+        <link href="indexVn.css" rel="stylesheet">
+        <link href="envifeed.css" rel="stylesheet">
 <body>
     <!-- Navigation -->
 
     <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-      <a class="navbar-brand" href="#"><img class="main-logo" src="image/logo.png" alt=""></a>
-      <div class="container-fluid navigation justify-content-center" style="display: table-cell;
-      vertical-align: middle;">
-          <div class="row">
-              <ul class="nav justify-content-around">
+        <a class="navbar-brand" href="#"><img class="main-logo" src="image/logo.png" alt=""></a>
+        <div class="container-fluid navigation justify-content-center" style="display: table-cell;
+        vertical-align: middle;">
+            <div class="row">
+                <ul class="nav justify-content-around">
+                    <li class="nav-item">
+                        <a class="btn btn-light nav-link" type="button"  href="indexVn.html">Trang chủ</a>
+                            </li>
+                            <li class="nav-item">
+                        <a class="btn btn-light nav-link" type="button" href="aboutusVn.html">Về chúng tôi</a>
+                            </li>
+                    <li class="nav-item dropdown">
+                        <a class="btn btn-light nav-link dropdown-toggle" type="button" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Sản phẩm
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="mushroomcultiVn.html">Enzym xử lý nguyên liệu trồng nấm</a>
+                            <a class="dropdown-item" href="envitreatmentVn.html">Enzym xử lý môi trường</a>
+                            <a class="dropdown-item" href="#">Enzym  bổ sung thức ăn gia súc, thủy sản</a>
+                            <a class="dropdown-item" href="envifoodVn.html">Enzym sản xuất mạch nha</a>
+                          </div>
+                            </li>
+                            <li class="nav-item">
+                                <a class="btn btn-light nav-link" type="button" href="serviceVn.html">Dịch vụ</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="btn btn-light nav-link" type="button" href="researchVn.html">Kết quả nghiên cứu</a>
+                            </li>
+                    <li class="nav-item">
+                        <a class="btn btn-light nav-link" type="button" href="faqVn.html">Hỏi đáp</a>
+                    </li>
                   <li class="nav-item">
-                      <a class="btn btn-light nav-link" type="button"  href="index.html">Home</a>
-                          </li>
-                          <li class="nav-item">
-                      <a class="btn btn-light nav-link" type="button" href="aboutus.html">About us</a>
-                          </li>
-                  <li class="nav-item dropdown">
-                      <a class="btn btn-light nav-link dropdown-toggle" type="button" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Product
-                      </a>
-                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item" href="mushroomculti.html">Enzyme for mushroom cultivation</a>
-                          <a class="dropdown-item" href="envitreatment.html">Enzyme for environmental treatment</a>
-                          <a class="dropdown-item" href="envifeed.html">Enzyme for feeding - Feed additives</a>
-                          <a class="dropdown-item" href="envifood.html">Enzyme for Maltose production</a>
-                        </div>
-                          </li>
-                          <li class="nav-item">
-                              <a class="btn btn-light nav-link" type="button" href="service.html">Service</a>
-                          </li>
-                          <li class="nav-item">
-                              <a class="btn btn-light nav-link" type="button" href="#">Reseach Finding</a>
-                          </li>
-                  <li class="nav-item">
-                      <a class="btn btn-light nav-link" type="button" href="faq.html">FAQ</a>
-                  </li>
-                <li class="nav-item">
-                  <a class="btn btn-light nav-link" type="button" href="contact.html">Contact</a>
-              </li>
-              <li>
-                  <i class="fa fa-phone fa_custom fa-2x"></i> <span class="text-danger">(+84)949 583 418</span>
-              </li>
-              </ul>
-          </div>
-          <div class="row" style="flex-direction: row-reverse;padding-right:2rem;padding-top:0.5rem">
-            <select class="vodiapicker" name="lang" onchange="location = this.value;">
-              <option value="#" class="test" data-thumbnail="image/united-states.svg">English</option>
-              <option value="researchVn.html" data-thumbnail="image/vietnam.svg">Vietnamese</option>
-        </select>
-      
-      <div class="lang-select">
-      <button class="btn-select" value=""></button>
-      <div class="b">
-      <ul id="a"></ul>
-      </div>
-      </div>
-          </div>
-      </div>
-  </nav>
+                    <a class="btn btn-light nav-link" type="button" href="contactVn.html">Liên hệ</a>
+                </li>
+                <li>
+                    <i class="fa fa-phone fa_custom fa-2x"></i> <span class="text-danger">(+84)949 583 418</span>
+                </li>
+                </ul>
+            </div>
+            <div class="row" style="flex-direction: row-reverse;padding-right:2rem;padding-top:0.5rem">
+
+
+                <select class="vodiapicker">
+                    <option value="envifeed.html" class="test" data-thumbnail="image/united-states.svg">English</option>
+                    <option value="#" data-thumbnail="image/vietnam.svg">Vietnamese</option>
+              </select>
+        
+        <div class="lang-select">
+        <button class="btn-select" value=""></button>
+        <div class="b">
+        <ul id="a"></ul>
+        </div>
+        </div>
+            </div>
+        </div>
+    </nav>
         <!-- Content-->
-        <div class="container-fluid">
-          <div class="row list">
+        <div class="row list">
             <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar">
                 <div class="position-sticky pt-3">
-                    <img src="image/Screenshot 2021-02-24 201342.png" alt="">
+                    <img src="image/Screenshot 2021-02-22 105412.png" alt="">
                   <ul class="nav flex-column" id="nav--primary">
                     <li class="nav-item">
-                        <a class="nav-link active" target="iframe_a" href="doc/Bài viết tham gia HN Nấm Toàn quốc lần 3, T11.2020.pdf">
+                        <a class="nav-link active" target="iframe_a" href="doc/Giới thiệu sản phẩm Maxigest Super.pdf">
                           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline></svg>
-                          Bài viết tham gia HN Nấm Toàn quốc lần 3, T11.2020
+                          Giới thiệu sản phẩm Maxigest Super
                         </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" target="iframe_a" href="doc/SÁNG KIẾN Enzyme trong trồng nấm.pdf">
+                        <a class="nav-link" target="iframe_a" href="doc/Enzymes trong xử lý nước ao nuôi.pdf">
                           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline></svg>
-                          SÁNG KIẾN Enzyme trong trồng nấm
+                          Enzymes trong xử lý nước ao nuôi
                         </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" target="iframe_a" href="doc/Thành công trong sử dụng enzym xử lý nguyên liệu trồng nấm, số 1-2020, Sở KHCN Hà Tĩnh.pdf">
+                        <a class="nav-link" target="iframe_a" href="doc/Tờ rơi Maxigest cho ngành thủy sản.pdf">
                           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline></svg>
-                          Thành công trong sử dụng enzym xử lý nguyên liệu trồng nấm, số 1-2020, Sở KHCN Hà Tĩnh
+                          Tờ rơi Maxigest cho ngành thủy sản
                         </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="https://repository.vnu.edu.vn/handle/VNU_123/22238">
+                        <a class="nav-link" target="iframe_a" href="doc/Thông tin sản phẩm SEBneutral PL ( enzymes thủy phân Protein).pdf">
                           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline></svg>
-                          Đề tài NCKH. QMT.09.01
+                          Thông tin sản phẩm SEBneutral PL ( enzymes thủy phân Protein)
                         </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="https://sites.google.com/site/trangtraihoavang/home/nam/enzyme-xu-ly-rom">
+                        <a class="nav-link" target="iframe_a" href="doc/Thông tin sản phẩm Sebphytase 2MG- PDS-R3-EA.pdf">
                           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline></svg>
-                          Enzyme xử lý rơm trồng nấm
-                        </a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC291760/">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline></svg>
-                          Extracellular Enzymes Produced by the Cultivated Mushroom
-                        </a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" target="iframe_a" href="doc/molecules-25-02811-v2.pdf">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline></svg>
-                          Cultivation of Mushrooms and Their Lignocellulolytic Enzyme Production Through the
-Utilization of Agro-Industrial Waste
+                          Thông tin sản phẩm Sebphytase 2MG- PDS-R3-EA
                         </a>
                       </li>
                   </ul>
                 </div>
               </nav>
               <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-                <iframe src="doc/Bài viết tham gia HN Nấm Toàn quốc lần 3, T11.2020.pdf#zoom=FitH"  name="iframe_a">
+                <iframe src="doc/Giới thiệu sản phẩm Maxigest Super.pdf#zoom=FitH" name="iframe_a">
                 </iframe>
               </main>
         </div>
-        </div>
-
 <!--- Footer -->
 <footer>
 	<div class="container-fluid" style="background:#1f1f1f;">
@@ -230,7 +216,7 @@ $('.vodiapicker option').each(function () {
 $('#a').html(langArray);
 
 //Set the button value to the first el of the array
-$('.btn-select').html(langArray[0]);
+$('.btn-select').html(langArray[1]);
 $('.btn-select').attr('value', 'en');
 
 //change button stuff on click
@@ -243,9 +229,9 @@ $('#a li').click(function () {
 	$('.btn-select').html(item);
 	$('.btn-select').attr('value', value);
 	$('.b').toggle();
+	//console.log(value);
   window.location.href = $(this).find('img').attr('value');
 
-	//console.log(value);
 });
 
 $('.btn-select').click(function () {
