--- a/envifoodVn.html
+++ b/envifoodVn.html
@@ -17,110 +17,97 @@
         <script src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
 
         <!-- CSS only -->
-        <link href="index.css" rel="stylesheet">
-        <link href="envifeed.css" rel="stylesheet">
+        <link href="indexVn.css" rel="stylesheet">
+        <link href="envifood.css" rel="stylesheet">
 <body>
     <!-- Navigation -->
 
     <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-      <a class="navbar-brand" href="#"><img class="main-logo" src="image/logo.png" alt=""></a>
-      <div class="container-fluid navigation justify-content-center" style="display: table-cell;
-      vertical-align: middle;">
-          <div class="row">
-              <ul class="nav justify-content-around">
+        <a class="navbar-brand" href="#"><img class="main-logo" src="image/logo.png" alt=""></a>
+        <div class="container-fluid navigation justify-content-center" style="display: table-cell;
+        vertical-align: middle;">
+            <div class="row">
+                <ul class="nav justify-content-around">
+                    <li class="nav-item">
+                        <a class="btn btn-light nav-link" type="button"  href="indexVn.html">Trang chủ</a>
+                            </li>
+                            <li class="nav-item">
+                        <a class="btn btn-light nav-link" type="button" href="aboutusVn.html">Về chúng tôi</a>
+                            </li>
+                    <li class="nav-item dropdown">
+                        <a class="btn btn-light nav-link dropdown-toggle" type="button" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Sản phẩm
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="mushroomcultiVn.html">Enzym xử lý nguyên liệu trồng nấm</a>
+                            <a class="dropdown-item" href="envitreatmentVn.html">Enzym xử lý môi trường</a>
+                            <a class="dropdown-item" href="envifeedVn.html">Enzym  bổ sung thức ăn gia súc, thủy sản</a>
+                            <a class="dropdown-item" href="#">Enzym sản xuất mạch nha</a>
+                          </div>
+                            </li>
+                            <li class="nav-item">
+                                <a class="btn btn-light nav-link" type="button" href="serviceVn.html">Dịch vụ</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="btn btn-light nav-link" type="button" href="researchVn.html">Kết quả nghiên cứu</a>
+                            </li>
+                    <li class="nav-item">
+                        <a class="btn btn-light nav-link" type="button" href="faqVn.html">Hỏi đáp</a>
+                    </li>
                   <li class="nav-item">
-                      <a class="btn btn-light nav-link" type="button"  href="index.html">Home</a>
-                          </li>
-                          <li class="nav-item">
-                      <a class="btn btn-light nav-link" type="button" href="aboutus.html">About us</a>
-                          </li>
-                  <li class="nav-item dropdown">
-                      <a class="btn btn-light nav-link dropdown-toggle" type="button" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Product
-                      </a>
-                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item" href="mushroomculti.html">Enzyme for mushroom cultivation</a>
-                          <a class="dropdown-item" href="envitreatment.html">Enzyme for environmental treatment</a>
-                          <a class="dropdown-item" href="#">Enzyme for feeding - Feed additives</a>
-                          <a class="dropdown-item" href="envifood.html">Enzyme for Maltose production</a>
-                        </div>
-                          </li>
-                          <li class="nav-item">
-                              <a class="btn btn-light nav-link" type="button" href="service.html">Service</a>
-                          </li>
-                          <li class="nav-item">
-                              <a class="btn btn-light nav-link" type="button" href="research.html">Reseach Finding</a>
-                          </li>
-                  <li class="nav-item">
-                      <a class="btn btn-light nav-link" type="button" href="faq.html">FAQ</a>
-                  </li>
-                <li class="nav-item">
-                  <a class="btn btn-light nav-link" type="button" href="contact.html">Contact</a>
-              </li>
-              <li>
-                  <i class="fa fa-phone fa_custom fa-2x"></i> <span class="text-danger">(+84)949 583 418</span>
-              </li>
-              </ul>
-          </div>
-          <div class="row" style="flex-direction: row-reverse;padding-right:2rem;padding-top:0.5rem">
-            <select class="vodiapicker">
-              <option value="#" class="test" data-thumbnail="image/united-states.svg">English</option>
-              <option value="envifeedVn.html" data-thumbnail="image/vietnam.svg">Vietnamese</option>
-        </select>  
-      
-      <div class="lang-select">
-      <button class="btn-select" value=""></button>
-      <div class="b">
-      <ul id="a"></ul>
-      </div>
-      </div>
-          </div>
-      </div>
-  </nav>
+                    <a class="btn btn-light nav-link" type="button" href="contactVn.html">Liên hệ</a>
+                </li>
+                <li>
+                    <i class="fa fa-phone fa_custom fa-2x"></i> <span class="text-danger">(+84)949 583 418</span>
+                </li>
+                </ul>
+            </div>
+            <div class="row" style="flex-direction: row-reverse;padding-right:2rem;padding-top:0.5rem">
+
+
+                <select class="vodiapicker">
+                    <option value="envifood.html" class="test" data-thumbnail="image/united-states.svg">English</option>
+                    <option value="#" data-thumbnail="image/vietnam.svg">Vietnamese</option>
+              </select>
+        
+        <div class="lang-select">
+        <button class="btn-select" value=""></button>
+        <div class="b">
+        <ul id="a"></ul>
+        </div>
+        </div>
+            </div>
+        </div>
+    </nav>
         <!-- Content-->
-        <div class="row list">
+        <div class="container-fluid">
+          <div class="row list">
             <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar">
                 <div class="position-sticky pt-3">
-                    <img src="image/Screenshot 2021-02-22 105412.png" alt="">
+                    <img src="image/Screenshot 2021-02-21 183147.png" alt="">
                   <ul class="nav flex-column" id="nav--primary">
                     <li class="nav-item">
-                        <a class="nav-link active" target="iframe_a" href="doc/Giới thiệu sản phẩm Maxigest Super.pdf">
+                        <a class="nav-link active" target="iframe_a" href="doc/Giới thiệu enzymes SEBrew HT( Alpha amylase).pdf">
                           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline></svg>
-                          Giới thiệu sản phẩm Maxigest Super
+                          Giới thiệu enzymes SEBrew HT( Alpha amylase)
                         </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" target="iframe_a" href="doc/Enzymes trong xử lý nước ao nuôi.pdf">
+                        <a class="nav-link" target="iframe_a" href="doc/Giới thiệu SEB amyl L.pdf">
                           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline></svg>
-                          Enzymes trong xử lý nước ao nuôi
-                        </a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" target="iframe_a" href="doc/Tờ rơi Maxigest cho ngành thủy sản.pdf">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline></svg>
-                          Tờ rơi Maxigest cho ngành thủy sản
-                        </a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" target="iframe_a" href="doc/Thông tin sản phẩm SEBneutral PL ( enzymes thủy phân Protein).pdf">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline></svg>
-                          Thông tin sản phẩm SEBneutral PL ( enzymes thủy phân Protein)
-                        </a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" target="iframe_a" href="doc/Thông tin sản phẩm Sebphytase 2MG- PDS-R3-EA.pdf">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline></svg>
-                          Thông tin sản phẩm Sebphytase 2MG- PDS-R3-EA
+                          Giới thiệu SEB amyl L
                         </a>
                       </li>
                   </ul>
                 </div>
               </nav>
               <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-                <iframe src="doc/Giới thiệu sản phẩm Maxigest Super.pdf#zoom=FitH" name="iframe_a">
+                <iframe src="doc/Giới thiệu enzymes SEBrew HT( Alpha amylase).pdf#zoom=FitH"  name="iframe_a">
                 </iframe>
               </main>
         </div>
+        </div>
+
 <!--- Footer -->
 <footer>
 	<div class="container-fluid" style="background:#1f1f1f;">
@@ -176,6 +163,7 @@
   attribution="setup_tool"
   page_id="319274544847868">
 </div>
+
 <script>
     var tagU = document.getElementById("nav--primary");
     var tagA = tagU.getElementsByTagName("a");
@@ -188,6 +176,7 @@ for (var i = 0; i < tagA.length; i++) {
   this.className += " active";
   });
 }
+
 /** @format */
 
 //test for getting url value from attr
@@ -214,7 +203,7 @@ $('.vodiapicker option').each(function () {
 $('#a').html(langArray);
 
 //Set the button value to the first el of the array
-$('.btn-select').html(langArray[0]);
+$('.btn-select').html(langArray[1]);
 $('.btn-select').attr('value', 'en');
 
 //change button stuff on click
@@ -249,6 +238,7 @@ if (sessionLang) {
 	$('.btn-select').html(langArray[langIndex]);
 	//$('.btn-select').attr('value', 'en');
 }
+
     </script>
 
 
