--- a/envifood.html
+++ b/envifood.html
@@ -65,10 +65,10 @@
           <div class="row" style="flex-direction: row-reverse;padding-right:2rem;padding-top:0.5rem">
 
 
-              <select class="vodiapicker">
-                  <option value="us" class="test" data-thumbnail="image/united-states.svg">English</option>
-                  <option value="vn" data-thumbnail="image/vietnam.svg">Vietnamese</option>
-            </select>
+            <select class="vodiapicker">
+              <option value="#" class="test" data-thumbnail="image/united-states.svg">English</option>
+              <option value="envifoodVn.html" data-thumbnail="image/vietnam.svg">Vietnamese</option>
+        </select>  
       
       <div class="lang-select">
       <button class="btn-select" value=""></button>
@@ -217,6 +217,8 @@ $('#a li').click(function () {
 	$('.btn-select').attr('value', value);
 	$('.b').toggle();
 	//console.log(value);
+  window.location.href = $(this).find('img').attr('value');
+
 });
 
 $('.btn-select').click(function () {
