--- a/envitreatment.html
+++ b/envitreatment.html
@@ -19,7 +19,6 @@
         <!-- CSS only -->
         <link href="index.css" rel="stylesheet">
         <link href="envitreatment.css" rel="stylesheet">
-        <title>Ỉa</title>
 <body>
     <!-- Navigation -->
 
@@ -64,13 +63,10 @@
               </ul>
           </div>
           <div class="row" style="flex-direction: row-reverse;padding-right:2rem;padding-top:0.5rem">
-
-
-              <select class="vodiapicker">
-                  <option value="us" class="test" data-thumbnail="image/united-states.svg">English</option>
-                  <option value="vn" data-thumbnail="image/vietnam.svg">Vietnamese</option>
-            </select>
-      
+            <select class="vodiapicker">
+              <option value="#" class="test" data-thumbnail="image/united-states.svg">English</option>
+              <option value="envitreatmentVn.html" data-thumbnail="image/vietnam.svg">Vietnamese</option>
+        </select>      
       <div class="lang-select">
       <button class="btn-select" value=""></button>
       <div class="b">
@@ -256,6 +252,8 @@ $('#a li').click(function () {
 	$('.btn-select').attr('value', value);
 	$('.b').toggle();
 	//console.log(value);
+  window.location.href = $(this).find('img').attr('value');
+
 });
 
 $('.btn-select').click(function () {
