--- a/researchVn.html
+++ b/researchVn.html
@@ -16,67 +16,69 @@
         "image/logo_title.png" 
                 type = "image/x-icon"> 
         <!-- CSS only -->
-        <link href="index.css" rel="stylesheet">
+        <link href="indexVn.css" rel="stylesheet">
         <link href="research.css" rel="stylesheet">
         <title>Ỉa</title>
 <body>
     <!-- Navigation -->
 
     <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-      <a class="navbar-brand" href="#"><img class="main-logo" src="image/logo.png" alt=""></a>
-      <div class="container-fluid navigation justify-content-center" style="display: table-cell;
-      vertical-align: middle;">
-          <div class="row">
-              <ul class="nav justify-content-around">
+        <a class="navbar-brand" href="#"><img class="main-logo" src="image/logo.png" alt=""></a>
+        <div class="container-fluid navigation justify-content-center" style="display: table-cell;
+        vertical-align: middle;">
+            <div class="row">
+                <ul class="nav justify-content-around">
+                    <li class="nav-item">
+                        <a class="btn btn-light nav-link" type="button"  href="indexVn.html">Trang chủ</a>
+                            </li>
+                            <li class="nav-item">
+                        <a class="btn btn-light nav-link" type="button" href="aboutusVn.html">Về chúng tôi</a>
+                            </li>
+                    <li class="nav-item dropdown">
+                        <a class="btn btn-light nav-link dropdown-toggle" type="button" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Sản phẩm
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="mushroomcultiVn.html">Enzym xử lý nguyên liệu trồng nấm</a>
+                            <a class="dropdown-item" href="envitreatmentVn.html">Enzym xử lý môi trường</a>
+                            <a class="dropdown-item" href="envifeedVn.html">Enzym  bổ sung thức ăn gia súc, thủy sản</a>
+                            <a class="dropdown-item" href="envifoodVn.html">Enzym sản xuất mạch nha</a>
+                          </div>
+                            </li>
+                            <li class="nav-item">
+                                <a class="btn btn-light nav-link" type="button" href="serviceVn.html">Dịch vụ</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="btn btn-light nav-link" type="button" href="#">Kết quả nghiên cứu</a>
+                            </li>
+                    <li class="nav-item">
+                        <a class="btn btn-light nav-link" type="button" href="faqVn.html">Hỏi đáp</a>
+                    </li>
                   <li class="nav-item">
-                      <a class="btn btn-light nav-link" type="button"  href="index.html">Home</a>
-                          </li>
-                          <li class="nav-item">
-                      <a class="btn btn-light nav-link" type="button" href="aboutus.html">About us</a>
-                          </li>
-                  <li class="nav-item dropdown">
-                      <a class="btn btn-light nav-link dropdown-toggle" type="button" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Product
-                      </a>
-                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item" href="mushroomculti.html">Enzyme for mushroom cultivation</a>
-                          <a class="dropdown-item" href="envitreatment.html">Enzyme for environmental treatment</a>
-                          <a class="dropdown-item" href="envifeed.html">Enzyme for feeding - Feed additives</a>
-                          <a class="dropdown-item" href="envifood.html">Enzyme for Maltose production</a>
-                        </div>
-                          </li>
-                          <li class="nav-item">
-                              <a class="btn btn-light nav-link" type="button" href="service.html">Service</a>
-                          </li>
-                          <li class="nav-item">
-                              <a class="btn btn-light nav-link" type="button" href="#">Reseach Finding</a>
-                          </li>
-                  <li class="nav-item">
-                      <a class="btn btn-light nav-link" type="button" href="faq.html">FAQ</a>
-                  </li>
-                <li class="nav-item">
-                  <a class="btn btn-light nav-link" type="button" href="contact.html">Contact</a>
-              </li>
-              <li>
-                  <i class="fa fa-phone fa_custom fa-2x"></i> <span class="text-danger">(+84)949 583 418</span>
-              </li>
-              </ul>
-          </div>
-          <div class="row" style="flex-direction: row-reverse;padding-right:2rem;padding-top:0.5rem">
-            <select class="vodiapicker" name="lang" onchange="location = this.value;">
-              <option value="#" class="test" data-thumbnail="image/united-states.svg">English</option>
-              <option value="researchVn.html" data-thumbnail="image/vietnam.svg">Vietnamese</option>
-        </select>
-      
-      <div class="lang-select">
-      <button class="btn-select" value=""></button>
-      <div class="b">
-      <ul id="a"></ul>
-      </div>
-      </div>
-          </div>
-      </div>
-  </nav>
+                    <a class="btn btn-light nav-link" type="button" href="contactVn.html">Liên hệ</a>
+                </li>
+                <li>
+                    <i class="fa fa-phone fa_custom fa-2x"></i> <span class="text-danger">(+84)949 583 418</span>
+                </li>
+                </ul>
+            </div>
+            <div class="row" style="flex-direction: row-reverse;padding-right:2rem;padding-top:0.5rem">
+
+
+                <select class="vodiapicker">
+                    <option value="research.html" class="test" data-thumbnail="image/united-states.svg">English</option>
+                    <option value="#" data-thumbnail="image/vietnam.svg">Vietnamese</option>
+              </select>
+        
+        <div class="lang-select">
+        <button class="btn-select" value=""></button>
+        <div class="b">
+        <ul id="a"></ul>
+        </div>
+        </div>
+            </div>
+        </div>
+    </nav>
         <!-- Content-->
         <div class="container-fluid">
           <div class="row list">
@@ -230,7 +232,7 @@ $('.vodiapicker option').each(function () {
 $('#a').html(langArray);
 
 //Set the button value to the first el of the array
-$('.btn-select').html(langArray[0]);
+$('.btn-select').html(langArray[1]);
 $('.btn-select').attr('value', 'en');
 
 //change button stuff on click
